--- a/Praktek Pemdas/Aerox/CyberCity.html
+++ b/Praktek Pemdas/Aerox/CyberCity.html
@@ -1,42 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Showroom TAR</title>
-      <link rel="stylesheet" href="CyberCity.css" />
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link
-        href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@300;400;700&family=Montserrat:wght@400;500;600;700&family=Poppins:wght@400;500;600;700;800&family=Roboto:wght@400;500;700&display=swap"
-        rel="stylesheet" />
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link
-        href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@300;400;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@400;500;600;700&family=Poppins:wght@400;500;600;700;800&display=swap"
-        rel="stylesheet" />
-    </head>
-  <body>
-    <div class="container">
-      
-      <!-- NAV -->
 
-      <nav>
-        <p class="brand">Showroom TAR</p>
-        <div class="nav-item">
-          <a href="/index.html">Home</a>
-          <a href="/store.html" id="nav-item-center">Store</a>
-          <a href="/contact.html" id="nav-item-last">Contact</a>
-        </div>
-      </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Showroom TAR</title>
+  <link rel="stylesheet" href="CyberCity.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@300;400;700&family=Montserrat:wght@400;500;600;700&family=Poppins:wght@400;500;600;700;800&family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@300;400;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@400;500;600;700&family=Poppins:wght@400;500;600;700;800&display=swap"
+    rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/b2e5f6c14a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+</head>
+
+<body>
+  <div class="container" id="cont">
+    <!-- NAV -->
+
+    <nav>
+      <p class="brand">Showroom TAR</p>
+      <div class="nav-item">
+        <a href="index.html">Home</a>
+        <a href="store.html" id="nav-item-center">Store</a>
+        <a href="contact.html" >Contact</a>
+        <a href="" id="nav-item-last">
+          <span id="counter">0</span>
+          <span class="material-symbols-outlined">shopping_cart</span></a>
+      </div>
+    </nav>
 
       <!-- CONTENT -->
 
       <section>
         <div class="box">
-          <img src="aerox3.png" alt="">
+          <div class="wrap" id="imageMotor">
+            
+          </div>
           <div class="detail-item">
             <h1 class="item-name">Yamaha Aerox Cyber City 155cc
               <br>
@@ -54,7 +62,10 @@
             </div>
             <br>
             <div class="stok">Stock : 5</div>
-            <div class="wishlist">
+            <div class="wishlist" id="wishList">
+              <span class="material-symbols-outlined" id="love" onclick="doSomething()">
+                favorite
+                </span>
               <p>Add to Wishlist</p>
             </div>
           </div>
@@ -62,9 +73,9 @@
         <div class="box-bottom">
           <div class="box-bottom-left">
             <div class="other-image">
-              <img src="aerox3.png" alt="">
-              <img src="AEROX5 1.png" alt="">
-              <img src="AEROX6 1.png" alt="">
+              <img src="aerox3.png" alt="" onclick="btnBack()">
+              <img src="AEROX5 1.png" alt="" onclick="btn()">
+              <img src="AEROX6 1.png" alt="" onclick="btn3()">
             </div>
             <div class="button">
               <a href="checkout.html"><div class="btn">Check Out</div></a>
@@ -84,7 +95,7 @@
               <div class="box-item">
                 <img src="/zx2 1.png" alt="">
                 <p>Kawasaki Zx25r <br> (2021)</p>
-                <span>Rp 84.500.200 </span>
+                <span id="text">Rp 84.500.200 </span>
               </div>
               <div class="box-item">
                 <img src="/zx3 1.png" alt="" style="width: 170px;">
