--- a/Praktek Pemdas/store.html
+++ b/Praktek Pemdas/store.html
@@ -17,6 +17,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@300;400;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@400;500;600;700&family=Poppins:wght@400;500;600;700;800&display=swap"
     rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/b2e5f6c14a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
 </head>
 
 <body>
@@ -28,7 +31,10 @@
       <div class="nav-item">
         <a href="index.html">Home</a>
         <a href="store.html" id="nav-item-center">Store</a>
-        <a href="contact.html" id="nav-item-last">Contact</a>
+        <a href="contact.html" >Contact</a>
+        <a href="" id="nav-item-last">
+          <span id="counter">0</span>
+          <span class="material-symbols-outlined">shopping_cart</span></a>
       </div>
     </nav>
 
@@ -102,7 +108,7 @@
                   Vario 125
                   <span>New</span>
                   <br />
-                  (2024)
+                  (2023)
                 </h2>
                 <br />
                 <p class="price">$1,100</p>
@@ -185,7 +191,7 @@
               </div>
               <div class="motor-name">
                 <h2>
-                  Aerox 155 Cyber City
+                  Aerox 155 <br> Cyber City
                   <span>New</span>
                   <br />
                   (2022)
